[package]
name = "cand"
version = "0.3.2"
edition = "2024"
readme = "README.md"
description = "Beautiful embedded-first Rust logging library for ESP32 to servers with colorful output and zero-panic design."
repository = "https://github.com/CosmoBunny/cand.git"
license = "MIT"
keywords = ["embedded", "logging", "no-std", "esp32"]
categories = ["embedded", "development-tools::debugging"]

[dependencies]
once_cell = {version ="1.21.*", optional= true, default-features = false}
ufmt = { version = "0.2.*", optional = true }

[dev-dependencies]
reqwest = "0.12.*"
tokio = { version = "1.48.*", features = ["full"]}
tokio-macros = "2.6.*"

[features]
default = ["std", "colors", "alloc"]

std = ["dep:once_cell", "once_cell/std"]
alloc = ["once_cell?/alloc"]
colors = []
ufmt = ["dep:ufmt"]
